Fixed advantages align-items to center

--- a/source/sass/first-page.scss
+++ b/source/sass/first-page.scss
@@ -106,6 +106,7 @@ section#first-page {
   padding: 32px;
   display: flex;
   justify-content: center;
+  align-items: center;
   font-weight: 100;
   background: url(../images/bg-icons.png) #fff bottom;
   background-size: cover;
